<?xml version="1.0" encoding="utf-8"?>
<com.google.android.flexbox.FlexboxLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/list_games"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListGamesActivity"
    app:flexDirection="column">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_flexBasisPercent="70%"
        android:background="@color/grisInputs">

        <ListView
            android:id="@+id/lvGame"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:divider="@color/grisClaire"
            android:dividerHeight="1dp"/>

    </LinearLayout>

    <view
        android:id="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        class="com.google.android.flexbox.FlexboxLayout"
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        android:background="@color/grisFonce"
        android:padding="0dp"
        android:foregroundGravity="center"
        app:layout_flexBasisPercent="30%">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="3dp"
            android:gravity="center">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/ajouter_une_carte"
            android:textSize="18sp"
            android:layout_margin="2dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/nom_carte"
                android:layout_margin="2dp"/>

            <EditText
                android:id="@+id/etMapName"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_margin="5dp"
                android:background="@drawable/rounded_edittext"
                android:padding="0dp"
                android:textColor="@color/black"
                android:gravity="center" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="0dp"
            android:layout_margin="0dp">

            <Button
                android:id="@+id/btAddMap"
                android:layout_width="220dp"
                android:layout_height="70dp"
                android:backgroundTint="@color/Bleu"
                android:fontFamily="@font/black_ops_one"
                android:gravity="center"
                android:text="@string/creer_carte"
                android:textSize="16sp"
                app:cornerRadius="50dp" />
        </LinearLayout>


        </LinearLayout>
    </view>

</com.google.android.flexbox.FlexboxLayout>